[package]
name = "nano_entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
fern = "0.6.1"
image-base64 = "0.1.0"
log = { version = "0.4.17", features = ["serde"] }
mcprotocol = { git = "https://github.com/MCEntropy/MCProtocol.rs", branch = "rewrite" }
memoize = { version = "0.3.1", features = ["full"] }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
